[package]
name = "thestack"
version.workspace = true
edition.workspace = true


[features]
default = ["new"]
new = []
axum = []
validator = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
tower-layer = "0.3.3"
anyhow.workspace = true
tokio = { version = "1.44.0", features = ["full"] }
derive-new = "0.7.0"

[dev-dependencies]
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }


[workspace]
members = [
  # core crates for thestack-rs authentication and authorization
  ".",
  "crates/*",
]
resolver = "2"


[workspace.lints.clippy]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/codetheproject/thestack"
# TODO Add other important keyword!
keywords = ["authentication", "authorization", "thestack", "thestack-rs"]
categories = ["web-programming", "security", "authentication", "authorization"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0.87"
serde = "1.0.215"
