[package]
name = "thestack-axum"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true


[lints]
workspace = true

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
axum-extra = { version = "0.10.0", features = ["typed-routing"] }
validator = { version = "0.20.0", features = ["derive"] }
thestack = { version = "0.1.0", path = "../.." }
serde = { workspace = true, features = ["derive"] }
thestack-validator = { path = "../thestack-validator" }

[dev-dependencies]
anyhow = { workspace = true }
